Horizontal align fixed

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -2,6 +2,7 @@ $card-width: 200px;
 
 .catalog {
   display: grid;
+  justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax($card-width, 1fr));
 
   max-width: 944px;
